Add Comments Facebook

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <!-- Brand and toggle get grouped for better mobile display -->
           <a href="index.html" class="navbar-brand"><img src="assets/img/logoNavBar.png" alt="" style="width: 40%; height: 30%; align-items: center; margin-top: 2%;"></a>       
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="lni-menu"></i>
+            <!-- <i class="lni-menu"></i> -->
           </button>
           
         </div>
@@ -69,7 +69,7 @@
       <div id="hero-area" class="hero-area-bg">
         <div class="container">
           <div class="row">
-            <div class="col-md-12 col-sm-12">
+            <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <div class="contents text-center">
                 <h2 class="head-title wow fadeInUp" style="margin-top: 2%;margin-bottom: 2%;">Descubra <span style="color: rgb(255, 0, 68);">os segredos</span> que os bancos estão <span style="color:rgb(255, 0, 68);">escondendo</span> de você, <span style="color:rgb(255, 0, 68);">PARA LIBERAR O SEU CRÉDITO RAPIDAMENTE</span></h2>
                 <div class="header-button wow fadeInUp" data-wow-delay="0.3s">
@@ -100,6 +100,208 @@
     <!-- Header Area wrapper End -->
 
     <!-- Prova Social -->
+    <div class="container" style="background-color: #f6f7f9;">
+      <span class="titulo_comentario" style="font-weight: bolder;">25 comentários</span>
+      <hr>
+      <!-- 1 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img src="/assets/img/team/team-01.png">
+          <p style="color: #365899;font-weight: 700;">Davi Luiz</p>
+          <p>Eu já fui cara inadimplente, mas mudei de vida e tô dando volta por cima, agora meu score está 923 somente seguindo o guia</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 3 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+      <!-- 2 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Juliana Vieira</p>
+          <p>Esse guia me fez realizar o meu sonho de ter minha casa própria.</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 4 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+      <!-- 3 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Luiz Gustavo</p>
+          <p>O meu score era muito baixo, não conseguia comprar nada mais caro, depois que segui as dicas do guia as coisas ficaram cada vez mais fáceis</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 5 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+      <!-- 4 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Danilo Rocha</p>
+          <p>Funciona mesmo, consegui financiar o meu Argo com os ensinamentos desse guia, muito prático e rápido</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 12 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+      <!-- 5 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Luan Teixeira</p>
+          <p>Consegui aumentar 330 ponto no meu score apenas seguindo o passo a passo do guia, recomendo muito</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 19 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+      <!-- 6 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Breno Teixeira</p>
+          <p>Antes eu não conseguia fazer nada por causa do meu score, hoje já sinto uma alívio só de poder financiar um valor mais alto que antes por causa do guia</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 24 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+      <!-- 7 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Luiza Medeiros</p>
+          <p>Funciona mesmo, assim que eu comprei recebi na hora, e já estou aplicando as dicas.</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 26 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+      <!-- 8 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">João Mendes</p>
+          <p>Alguém pode me informar em quanto tempo chega o produto, e se é seguro a compra por gentileza…</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 31 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+       <!-- 9 comment -->
+       <div class="col-lg-2"></div>
+       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+         <div class="row">
+           <img>
+           <p style="color: #365899;font-weight: 700;">Felipe Martins</p>
+           <p>Recomendo muito esse guia para quem deseja aumentar o score, é muito valioso</p>
+           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 55 min</span>
+         </div>
+       </div>
+       <div class="col-lg-2"></div>
+        <!-- 10 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Eduardo Machado</p>
+          <p>Consegui financiar minha casa própria depois que eu descobri todos os segredos do guia</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 58 min</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+       <!-- 11 comment -->
+       <div class="col-lg-2"></div>
+       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+         <div class="row">
+           <img>
+           <p style="color: #365899;font-weight: 700;">Vitória Fonte</p>
+           <p>Gente, esse guia realmente vale a pena?</p>
+           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
+         </div>
+       </div>
+       <div class="col-lg-2"></div>
+        <!-- 12 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Fernando Machado</p>
+          <p>Consegui financiar o meu Onix com o seu método, só tenho a agradecer!</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+       <!-- 13 comment -->
+       <div class="col-lg-2"></div>
+       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+         <div class="row">
+           <img>
+           <p style="color: #365899;font-weight: 700;">Marcela Lima</p>
+           <p>Consegui comprar o presente de natal pro meu filho graças a você!!! jamais teria conseguido sem parcelar... e o Bruno tava tão tristinho, não queria desapontar ele!</p>
+           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
+         </div>
+       </div>
+       <div class="col-lg-2"></div>
+        <!-- 14 comment -->
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+        <div class="row">
+          <img>
+          <p style="color: #365899;font-weight: 700;">Yasmin Dias</p>
+          <p>Depois que usei o método de vocês consegui aumentar 330 pontos do meu score em apenas 12 dias.</p>
+          <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
+        </div>
+      </div>
+      <div class="col-lg-2"></div>
+       <!-- 15 comment -->
+       <div class="col-lg-2"></div>
+       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+         <div class="row">
+           <img>
+           <p style="color: #365899;font-weight: 700;">Vitor Lima</p>
+           <p>Será que isso não é furada?</p>
+           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
+         </div>
+       </div>
+       <div class="col-lg-2"></div>
+       <!-- 16 comment -->
+       <div class="col-lg-2"></div>
+       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+         <div class="row">
+           <img>
+           <p style="color: #365899;font-weight: 700;">Isabel Souza</p>
+           <p>Hoje meu score está em 835 e consegui um cartão de crédito com um bom limite, obrigado por passar algo tão organizado e passo a passo.</p>
+           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
+         </div>
+       </div>
+       <div class="col-lg-2"></div>
+       <!-- 17 comment -->
+       <div class="col-lg-2"></div>
+       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+         <div class="row">
+           <img>
+           <p style="color: #365899;font-weight: 700;">João Batista</p>
+           <p>Devo 20000 na praça e financiei um Corolla, esse guia me salvou</p>
+           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
+         </div>
+       </div>
+       <div class="col-lg-2"></div>
+       <!-- 18 comment -->
+       <div class="col-lg-2"></div>
+       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
+         <div class="row">
+           <img>
+           <p style="color: #365899;font-weight: 700;">Jhonatan Costa</p>
+           <p>No começo meu Score era baixo também, então não conseguia comprar ou tirar nada nas lojas. Comecei a então seguir tudo o que falaram no guia. O meu já está em 843.</p>
+           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
+         </div>
+       </div>
+       <div class="col-lg-2"></div>
+    </div>
     
     <!-- End Prova Social -->
 
