--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
   <body>
 
     <!-- Header Area wrapper Starts -->
+  
     <header id="header-wrap">
       <!-- Navbar Start -->
-      <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar text" style="background-color: #1b0052; color: white;">
-        <div class="container text-center">
+      
+      <nav class="navbar navbar-expand-md bg-inverse fixed-top scrolling-navbar text" style="background-color: #1b0052; color: white; position: relative;">
+        <div class="container text-center" style="padding-top: 2%;">
           <!-- Brand and toggle get grouped for better mobile display -->
           <a href="index.html" class="navbar-brand"><img src="assets/img/logoNavBar.png" alt="" style="width: 40%; height: 30%; align-items: center; margin-top: 2%;"></a>       
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-            <!-- <i class="lni-menu"></i> -->
           </button>
           
         </div>
@@ -69,9 +69,9 @@
       <div id="hero-area" class="hero-area-bg">
         <div class="container">
           <div class="row">
-            <div class=" col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
               <div class="contents text-center">
-                <h2 class="head-title wow fadeInUp" style="margin-top: 2%;margin-bottom: 2%;">Descubra <span style="color: rgb(255, 0, 68);">os segredos</span> que os bancos estão <span style="color:rgb(255, 0, 68);">escondendo</span> de você, <span style="color:rgb(255, 0, 68);">PARA LIBERAR O SEU CRÉDITO RAPIDAMENTE</span></h2>
+                  <h2 class="head-title wow" style="margin-top: 2%;margin-bottom: 2%;">Descubra <span style="color: rgb(255, 0, 68);">os segredos</span> que os bancos estão <span style="color:rgb(255, 0, 68);">escondendo</span> de você, <span style="color:rgb(255, 0, 68);">PARA LIBERAR O SEU CRÉDITO RAPIDAMENTE</span></h2>
                 <div class="header-button wow fadeInUp" data-wow-delay="0.3s">
                   <!-- IFRAME -->
                     <div class="embed-responsive embed-responsive-16by9">
@@ -107,7 +107,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="/assets/img/team/team-01.png">
+          <img src="/assets/img/team/team-01.png" style="float: left;">
           <p style="color: #365899;font-weight: 700;">Davi Luiz</p>
           <p>Eu já fui cara inadimplente, mas mudei de vida e tô dando volta por cima, agora meu score está 923 somente seguindo o guia</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 3 min</span>
