--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image21.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image21.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Luan Teixeira</p>
           <p>Consegui aumentar 330 ponto no meu score apenas seguindo o passo a passo do guia, recomendo muito</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 19 min</span>
