Adjust images coments

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image2.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image2.jpeg" style="float: left; width: 10%;">
           <p style="color: #365899;font-weight: 700;">Juliana Vieira</p>
           <p>Esse guia me fez realizar o meu sonho de ter minha casa própria.</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 4 min</span>
