Adjust images coments

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/imag5.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/imag5.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Davi Luiz</p>
           <p>Eu já fui cara inadimplente, mas mudei de vida e tô dando volta por cima, agora meu score está 923 somente seguindo o guia</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 3 min</span>
@@ -118,7 +118,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image2.jpeg" style="float: left; width: 10%;">
+          <img src="./assets/img/coments/image2.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Juliana Vieira</p>
           <p>Esse guia me fez realizar o meu sonho de ter minha casa própria.</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 4 min</span>
@@ -129,7 +129,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image1.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image1.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Luiz Gustavo</p>
           <p>O meu score era muito baixo, não conseguia comprar nada mais caro, depois que segui as dicas do guia as coisas ficaram cada vez mais fáceis</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 5 min</span>
@@ -140,7 +140,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image7.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image7.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Danilo Rocha</p>
           <p>Funciona mesmo, consegui financiar o meu Argo com os ensinamentos desse guia, muito prático e rápido</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 12 min</span>
@@ -162,7 +162,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image20.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image20.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Breno Teixeira</p>
           <p>Antes eu não conseguia fazer nada por causa do meu score, hoje já sinto uma alívio só de poder financiar um valor mais alto que antes por causa do guia</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 24 min</span>
@@ -173,7 +173,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image3.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image3.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Luiza Medeiros</p>
           <p>Funciona mesmo, assim que eu comprei recebi na hora, e já estou aplicando as dicas.</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 26 min</span>
@@ -184,7 +184,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image17.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image17.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">João Mendes</p>
           <p>Alguém pode me informar em quanto tempo chega o produto, e se é seguro a compra por gentileza…</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 31 min</span>
@@ -195,7 +195,7 @@
        <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
-          <img src="./assets/img/coments/image18.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image18.jpeg" style="float: left; width: 60px;height: 50px;">
            <p style="color: #365899;font-weight: 700;">Felipe Martins</p>
            <p>Recomendo muito esse guia para quem deseja aumentar o score, é muito valioso</p>
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 55 min</span>
@@ -206,7 +206,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image16.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image16.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Eduardo Machado</p>
           <p>Consegui financiar minha casa própria depois que eu descobri todos os segredos do guia</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 58 min</span>
@@ -217,7 +217,7 @@
        <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
-          <img src="./assets/img/coments/image19.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image19.jpeg" style="float: left; width: 60px;height: 50px;">
            <p style="color: #365899;font-weight: 700;">Vitória Fonte</p>
            <p>Gente, esse guia realmente vale a pena?</p>
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
@@ -228,7 +228,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image8.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image8.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Fernando Machado</p>
           <p>Consegui financiar o meu Onix com o seu método, só tenho a agradecer!</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
@@ -239,7 +239,7 @@
        <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
-          <img src="./assets/img/coments/image4.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image4.jpeg" style="float: left; width: 60px;height: 50px;">
            <p style="color: #365899;font-weight: 700;">Marcela Lima</p>
            <p>Consegui comprar o presente de natal pro meu filho graças a você!!! jamais teria conseguido sem parcelar... e o Bruno tava tão tristinho, não queria desapontar ele!</p>
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
@@ -250,7 +250,7 @@
       <div class="col-lg-2"></div>
       <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
         <div class="row">
-          <img src="./assets/img/coments/image15.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image15.jpeg" style="float: left; width: 60px;height: 50px;">
           <p style="color: #365899;font-weight: 700;">Yasmin Dias</p>
           <p>Depois que usei o método de vocês consegui aumentar 330 pontos do meu score em apenas 12 dias.</p>
           <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
@@ -261,7 +261,7 @@
        <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
-          <img src="./assets/img/coments/image12.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image12.jpeg" style="float: left; width: 60px;height: 50px;">
            <p style="color: #365899;font-weight: 700;">Vitor Lima</p>
            <p>Será que isso não é furada?</p>
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
@@ -272,7 +272,7 @@
        <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
-          <img src="./assets/img/coments/image11.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image11.jpeg" style="float: left; width: 60px;height: 50px;">
            <p style="color: #365899;font-weight: 700;">Isabel Souza</p>
            <p>Hoje meu score está em 835 e consegui um cartão de crédito com um bom limite, obrigado por passar algo tão organizado e passo a passo.</p>
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
@@ -283,7 +283,7 @@
        <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
-          <img src="./assets/img/coments/image9.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image9.jpeg" style="float: left; width: 60px;height: 50px;">
            <p style="color: #365899;font-weight: 700;">João Batista</p>
            <p>Devo 20000 na praça e financiei um Corolla, esse guia me salvou</p>
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
@@ -294,7 +294,7 @@
        <div class="col-lg-2"></div>
        <div class="col-lg-8 col-md-12 col-xs-12" style="background-color: #f6f7f9; font-family: Arial; font-size: 14px; padding: 20px;">
          <div class="row">
-          <img src="./assets/img/coments/image10.jpeg" style="float: left; width: 60px;">
+          <img src="./assets/img/coments/image10.jpeg" style="float: left; width: 60px;height: 50px;">
            <p style="color: #365899;font-weight: 700;">Jhonatan Costa</p>
            <p>No começo meu Score era baixo também, então não conseguia comprar ou tirar nada nas lojas. Comecei a então seguir tudo o que falaram no guia. O meu já está em 843.</p>
            <span class="infos" style="font-size: 11px;color: #90949c;">Responder · Curtir · Seguir · 1h</span>
