--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
           color: rgb(0, 0, 0);
           transform: translateY(-7px);
         }
+        @keyframes clickit {
+    0% {opacity: 0}
+    80% {opacity: 0}
+    100% {opacity: 1}
+}
     </style>
 
   </head>
@@ -83,7 +88,7 @@
                   font-size: 25px;
                   font-weight: 700; margin-top: 3%; margin-bottom: 3%;">Por favor, verifique se o som está ligado! &#128521;</h5>
 
-                  <button type="button" class="btn btn-success btn-lg btn-zap"><a href="/" style="text-decoration: none; color: white;">SIM, QUERO AUMENTAR MEU SCORE</a></button>
+                  <button type="button" class="btn btn-success btn-lg btn-zap" style="animation: clickit 12.0s;"><a href="/" style="text-decoration: none; color: white; ">SIM, QUERO AUMENTAR MEU SCORE</a></button>
                   <br>
                   <p style="color: black;">
                     <a href="politicas.html" style="text-decoration: none;color: black;"><strong>Política de Privacidade</strong></a> | 
@@ -334,7 +339,7 @@
                 <br>
                 <p style="color: rgb(0, 0, 0); font-size: x-large; font-weight: bolder;"><span style="color: rgb(50, 150, 0); font-size: xxx-large; font-weight: bolder;"> R$97,00</span></p>
               </ul>
-              <button type="button" class="btn btn-success btn-lg btn-zap"><a href="/" style="text-decoration: none; color: white;">SIM, QUERO AUMENTAR MEU SCORE</a></button>
+              <button type="button" class="btn btn-success btn-lg btn-zap"><a href="/" style="text-decoration: none; color: white; animation: clickit 4.5s">SIM, QUERO AUMENTAR MEU SCORE</a></button>
             </div> 
           </div>
         </div>
