Adjust combo, and titles

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
     <title>Score dos Sonhos</title>
 
-    
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css" >
     <!-- Icon -->
@@ -48,10 +46,15 @@
           transform: translateY(-7px);
         }
         @keyframes clickit {
-    0% {opacity: 0}
-    80% {opacity: 0}
-    100% {opacity: 1}
-}
+          0% {opacity: 0}
+          80% {opacity: 0}
+          100% {opacity: 1}
+        }
+
+        .text-precos {
+          font-weight: bolder;
+        }
+
     </style>
 
   </head>
@@ -320,20 +323,20 @@
         </div>
         <div class="row">
           <div class="col-lg-6 col-md-6 col-xs-12">
-            <img src="./assets/img/combo.png" style="width: 90%;">
+            <img src="./assets/img/combo2.png" style="width: 90%;">
           </div>
           <div class="col-lg-6 col-md-6 col-xs-12 active">
             <div class="table wow" id="active-tb" data-wow-delay="1.2s">
               <ul class="description">
-                <p> - Ebook Método Score dos Sonhos</p>
-                <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$97,00</span></p>
-                <p> - Ebook Bonus 1: Como Renegociar e sair do SCPC Sem Pagar Juros</p>
+                <p class="text-precos">Ebook Método Score dos Sonhos</p>
+                <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$97,00</span></p>
+                <p class="text-precos">Ebook Bônus 1: Sair do SCPC e renegociar Sem Pagar Juros</p>
+                <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$44,00</span></p>
+                <p class="text-precos">Ebook Bônus 2: 7 fatores que baixam o Score</p>
+                <p class="text-precos"><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$44,00</span></p>
+                <p class="text-precos">Ebook Bônus 3: Como financiar seu carro</p>
                 <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$44,00</span></p>
-                <p> - Ebook Bonus 2: 7 Elementos que mais baixam o Score</p>
-                <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$44,00</span></p>
-                <p> - Ebook Bonus 3: Lorem Ipsum</p>
-                <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$44,00</span></p>
-                <p> - AudioBook Score dos Sonhos</p>
+                <p class="text-precos">AudioBook Score dos Sonhos</p>
                 <p><span style="color: red; font-size: larger; font-weight: bolder;text-decoration: line-through">R$22,00</span></p>
                 <br>
                 <h2 class="section-title wow fadeInDown" data-wow-delay="0.3s" style="color: white; font-size: x-large;">TOTAL:</h2>
